--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
     }
   },
   "routes": [
-    { "src": "/(.*)",  "dest": "/api/index.php" }
+    {  "src": "/(.*)",
+      "dest": "/public/index.php" }
   ],
   "env": {
     "APP_ENV": "production",
